Anotações, add photos, changed names

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
 }
 
 
-/* media queries */
+/* media queries, pesquisar o que são elas */
 
 @media (max-width: 1024px) {
     .instagram-wrapper {
